--- a/css/styles.css
+++ b/css/styles.css
@@ -11393,7 +11393,9 @@ header.masthead {
   padding-top: 10rem;
   padding-bottom: calc(10rem - 4.5rem);
   /*background: linear-gradient(to bottom, rgba(92, 77, 66, 0.8) 0%, rgba(92, 77, 66, 0.8) 100%), url("../assets/img/bg-masthead.jpg");*/
-  background: linear-gradient(to bottom, rgb(60 0 124 / 80%) 0%, rgb(22 0 36 / 80%) 100%), url(../assets/img/bg-masthead.jpg);
+  background: linear-gradient(to bottom, rgb(60 0 124) 0%, rgb(71 23 120) 100%), url();
+  /* background: linear-gradient(to bottom, rgb(60 0 124) 0%, rgb(22 0 36 / 80%) 100%), url(); */
+  /* background: linear-gradient(to bottom, rgb(60 0 124) 0%, rgb(22 0 36 / 80%) 100%), url(../assets/img/bg-masthead.jpg); */
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: scroll;
@@ -11404,10 +11406,10 @@ header.masthead h1, header.masthead .h1 {
 }
 @media (min-width: 992px) {
   header.masthead {
-    height: 100vh;
+    /*height: 100vh;*/
     min-height: 40rem;
     padding-top: 4.5rem;
-    padding-bottom: 0;
+    padding-bottom: 4.5rem;
   }
   header.masthead p {
     font-size: 1.15rem;
